products swagger docs
