# 9-apis/internal/dto/dto.go
@@ -17,3 +17,7 @@ type GetJWTInput struct {
 	Email string  `json:"email"`
 	Password string  `json:"password"`
 }
+
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
+}
